k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: quizmaster
  labels:
    name: quizmaster
    app: quizmaster
